tests/errors/variant_flow/flow_unreachable_arm_on_parameter.sim

            enum Option: Copy + Drop { None: unit Some: i64 }
            fn f(o: Option) {
              entry:
                switchEnum(o) [None: n, Some: dead]
              n: return
              dead: unreachable
            }
            